fix the dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,6 @@ html{
 }
 
 
-
-
 body {
   font-family: 'Gilroy Light', sans-serif;
 }
@@ -106,14 +104,4 @@ h4{
 p{
   font-size: var(--small-font);
   color: var(--color-text-secondary);
-}
-
-/* @media (prefers-color-scheme: dark) {
-
-} */
-
-@media (prefers-color-scheme: dark){
-  body {
-     background: #000;
-  }
 }
